--- a/about.html
+++ b/about.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
 <html>
-<h1>About Page</h1>
+<head>
+
+	<meta charset="utf-8">
+
+	<title>Hello World!</title>
+
+</head>
+<body><h1>About Page</h1></body>
+
 </html>
